add record product for search and notification